.vendor/dislin/julia/Dislin.jl


function getsp2()
  i1 = Cint[0]
  i2 = Cint[0]
  i3 = Cint[0]
  ccall((:getsp2, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), 
           i1, i2, i3)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), convert(Int64, i3[1])
end

function getsym()
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:getsym, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}), i1, i2)
  return convert(Int64, i1[1]), convert(Int64, i2[1])
end

function gettcl()
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:gettcl, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}), i1, i2)
  return convert(Int64, i1[1]), convert(Int64, i2[1])
end

function gettic()
  i1 = Cint[0]
  i2 = Cint[0]
  i3 = Cint[0]
  ccall((:gettic, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), 
           i1, i2, i3)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), convert(Int64, i3[1])
end

function gettyp()
  n = ccall((:gettyp, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function getuni()
  p = ccall((:getuni, "libdislin_d.so"), Cstring, ())
  if (p == C_NULL)
    return convert(Int64, 0)
  end
end

function getver()
  x = ccall((:getver, "libdislin_d.so"), Float64, ())
  return x
end

function getvk()
  i1 = Cint[0]
  i2 = Cint[0]
  i3 = Cint[0]
  ccall((:getvk, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), 
           i1, i2, i3)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), convert(Int64, i3[1])
end

function getvlt()
  p = ccall((:getvlt, "libdislin_d.so"), Cstring, ())
  return bytestring(p)
end

function getwid()
  n = ccall((:getwid, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function getwin()
  i1 = Cint[0]
  i2 = Cint[0]
  i3 = Cint[0]
  i4 = Cint[0]
  ccall((:getwin, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint},
           Ptr{Cint}), i1, i2, i3, i4)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), convert(Int64, i3[1]),
         convert(Int64, i4[1])
end

function getxid(s::String)
  n = ccall((:getxid, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s)
  return convert(Int64, n)
end

function gifmod(s1::String, s2::String)
  ccall((:gifmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function gmxalf(s::String)
  s1 = Array{UInt8}(undef, 2);
  s2 = Array{UInt8}(undef, 2);
  n = ccall((:gmxalf, "libdislin_d.so"), Int32, (Ptr{UInt8}, Ptr{UInt8},
          Ptr{UInt8}), s, s1, s2)
  n1 = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s1)
  n2 = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s2)
  resize!(s1, n1)
  resize!(s2, n2)
  GC.@preserve s1
  GC.@preserve s2
  return unsafe_string(pointer(s1)), unsafe_string(pointer(s2))
end

function gothic()
  ccall((:gothic, "libdislin_d.so"), Cvoid, ())
end

function grace(i::Int64)
  ccall((:grace, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function graf(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
              x5::Float64, x6::Float64, x7::Float64, x8::Float64)
  ccall((:graf, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Float64, Float64, Float64), 
          x1, x2, x3, x4, x5, x6, x7, x8)
end

function graf3(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
               x5::Float64, x6::Float64, x7::Float64, x8::Float64,
               x9::Float64, x10::Float64, x11::Float64, x12::Float64)
  ccall((:graf3, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Float64, Float64, Float64, Float64, Float64,
          Float64, Float64),
           x1, x2, x3, x4, x5, x6, x7, x8, x9, x10, x11, x12)
end

function graf3d(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
               x5::Float64, x6::Float64, x7::Float64, x8::Float64,
               x9::Float64, x10::Float64, x11::Float64, x12::Float64)
  ccall((:graf3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Float64, Float64, Float64, Float64, Float64,
          Float64, Float64),
           x1, x2, x3, x4, x5, x6, x7, x8, x9, x10, x11, x12)
end

function grafmp(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
                x5::Float64, x6::Float64, x7::Float64, x8::Float64)
  ccall((:grafmp, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Float64, Float64, Float64), 
          x1, x2, x3, x4, x5, x6, x7, x8)
end

function grafp(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
                x5::Float64)
  ccall((:grafp, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64), x1, x2, x3, x4, x5)
end

function grafr(xray::Vector{Float64}, n::Int64, yray::Vector{Float64}, 
               m::Int64)
  ccall((:grafr, "libdislin_d.so"), Cvoid, 
          (Ptr{Float64}, Int32, Ptr{Float64}, Int32), xray, n, yray, m)
end

function grdpol(i1::Int64, i2::Int64)
  ccall((:grdpol, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function grffin()
  ccall((:grffin, "libdislin_d.so"), Cvoid, ())
end

function grfimg(s::String)
  ccall((:grfimg, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function grfini(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
           x5::Float64, x6::Float64, x7::Float64, x8::Float64, x9::Float64)
  ccall((:grfini, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Float64, Float64, Float64, Float64), 
          x1, x2, x3, x4, x5, x6, x7, x8, x9)
end

function grid(i1::Int64, i2::Int64)
  ccall((:grid, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function grid3d(i1::Int64, i2::Int64, s::String)
  ccall((:grid3d, "libdislin_d.so"), Cvoid, (Int32, Int32, Ptr{UInt8}), 
           i1, i2, s)
end

function gridim(x1::Float64, x2::Float64, x3::Float64, i::Int64)
  ccall((:gridim, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Int32), x1, x2, x3, i)
end

function gridmp(i1::Int64, i2::Int64)
  ccall((:gridmp, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function gridre(x1::Float64, x2::Float64, x3::Float64, i::Int64)
  ccall((:gridre, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Int32), x1, x2, x3, i)
end

function gwgatt(i::Int64, s::String)
  n = ccall((:gwgatt, "libdislin_d.so"), Int32, (Int32, Ptr{UInt8}), i, s)
  return convert(Int64, n)
end

function gwgbox(i::Int64)
  n = ccall((:gwgbox, "libdislin_d.so"), Int32, (Int32,), i)
  return convert(Int64, n)
end

function gwgbut(i::Int64)
  n = ccall((:gwgbut, "libdislin_d.so"), Int32, (Int32,), i)
  return convert(Int64, n)
end

function gwgfil(i::Int64)
  s = Array{UInt8}(undef, 257)
  ccall((:gwgfil, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
  n = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s)
  resize!(s, n)
  GC.@preserve s
  return unsafe_string(pointer(s))
end

function gwgflt(i::Int64)
  x = ccall((:gwgflt, "libdislin_d.so"), Float64, (Int32,), i)
  return x
end

function gwggui()
  n = ccall((:gwggui, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function gwgint(i::Int64)
  n = ccall((:gwgint, "libdislin_d.so"), Int32, (Int32,), i)
  return convert(Int64, n)
end

function gwglis(i::Int64)
  n = ccall((:gwglis, "libdislin_d.so"), Int32, (Int32,), i)
  return convert(Int64, n)
end

function gwgscl(i::Int64)
  x = ccall((:gwgscl, "libdislin_d.so"), Float64, (Int32,), i)
  return x
end

function gwgsiz(i::Int64)
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:gwgsiz, "libdislin_d.so"), Cvoid, (Int32, Ptr{Cint}, Ptr{Cint}), 
          i, i1, i2)
  return convert(Int64, i1[1]), convert(Int64, i2[1])
end

function gwgtbf(i1::Int64, i2::Int64, i3::Int64)
  x = ccall((:gwgtbf, "libdislin_d.so"), Float64, (Int32, Int32, Int32), 
               i1, i2, i3)
  return x
end

function gwgtbi(i1::Int64, i2::Int64, i3::Int64)
  n = ccall((:gwgtbi, "libdislin_d.so"), Int32, (Int32, Int32, Int32), 
               i1, i2, i3)
  return convert(Int64, n)
end

function gwgtbl(i1::Int64, xray::Vector{Float64}, i2::Int64, i3::Int64,
                s::String)
  ccall((:gwgtbl, "libdislin_d.so"), Cvoid, 
          (Int32, Ptr{Float64}, Int32, Int32, Ptr{UInt8}), i1, xray, i2, i3, s)
end

function gwgtbs(i1::Int64, i2::Int64, i3::Int64)
  s = Array{UInt8}(undef, 257)
  ccall((:gwgtbs, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Ptr{UInt8}),
          i1, i2, i3, s)
  n = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s)
  resize!(s, n)
  GC.@preserve s
  return unsafe_string(pointer(s))
end

function gwgtxt(i::Int64)
  s = Array{UInt8}(undef, 257)
  ccall((:gwgtxt, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
  n = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s)
  resize!(s, n)
  GC.@preserve s
  return unsafe_string(pointer(s))
end

function gwgxid(i::Int64)
  n = ccall((:gwgxid, "libdislin_d.so"), Int32, (Int32,), i)
  return convert(Int64, n)
end

function height(i::Int64)
  ccall((:height, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function helve()
  ccall((:helve, "libdislin_d.so"), Cvoid, ())
end

function helves()
  ccall((:helves, "libdislin_d.so"), Cvoid, ())
end

function helvet()
  ccall((:helvet, "libdislin_d.so"), Cvoid, ())
end

function hidwin(i::Int64, s::String)
  ccall((:hidwin, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
end

function histog(xray::Vector{Float64}, n::Int64, x::Vector{Float64},
                y::Vector{Float64})
  m = Cint[0]
  ccall((:histog, "libdislin_d.so"), Cvoid, 
          (Ptr{Float64}, Int32, Ptr{Float64}, Ptr{Float64}, Ptr{Cint}), 
          xray, n, x, y, m)
  return convert(Int64, m[1])
end

function hname(i::Int64)
  ccall((:hname, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function hpgmod(s1::String, s2::String)
  ccall((:hpgmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function hsvrgb(x1::Float64, x2::Float64, x3::Float64)
  xp1 = Cdouble[0]
  xp2 = Cdouble[0]
  xp3 = Cdouble[0]
  ccall((:hsvrgb, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), x1, x2, x3, xp1, xp2, xp3)
  return xp1[1], xp2[1], xp3[1]
end

function hsym3d(x::Float64)
  ccall((:hsym3d, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function hsymbl(i::Int64)
  ccall((:hsymbl, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function htitle(i::Int64)
  ccall((:htitle, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function hwfont()
  ccall((:hwfont, "libdislin_d.so"), Cvoid, ())
end

function hwmode(s1::String, s2::String)
  ccall((:hwmode, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function hworig(i1::Int64, i2::Int64)
  ccall((:hworig, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function hwpage(i1::Int64, i2::Int64)
  ccall((:hwpage, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function hwscal(x::Float64)
  ccall((:hwscal, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function imgbox(i1::Int64, i2::Int64, i3::Int64, i4::Int64)
  ccall((:imgbox, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4)
end

function imgwin(i1::Int64, i2::Int64, i3::Int64, i4::Int64)
  ccall((:imgwin, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4)
end

function imgfin()
  ccall((:imgfin, "libdislin_d.so"), Cvoid, ())
end

function imgfmt(s::String)
  ccall((:imgfmt, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function imgini()
  ccall((:imgini, "libdislin_d.so"), Cvoid, ())
end

function imgmod(s::String)
  ccall((:imgmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function imgsiz(i1::Int64, i2::Int64)
  ccall((:imgsiz, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function imgptr(i::Int64)
  ccall((:imgptr, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function inccrv(i::Int64)
  ccall((:inccrv, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function incdat(i1::Int64, i2::Int64, i3::Int64)
  n = ccall((:inccrv, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32), 
              i1, i2, i3)
  return convert(Int64, n)
end
